More work on cart

--- a/views/cart.hbs
+++ b/views/cart.hbs
@@ -1,7 +1,7 @@
 <div class="container shopping-cart">
   <div class="col-md-12">
     <h2 class="cartH2">Your Shopping Cart</h2>
-    
+
     <!-- Default bootstrap modal example -->
     <div class="modal fade" id="cartModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
       <div class="modal-dialog">
@@ -66,7 +66,7 @@
   </div>
 
   <!-- Modal Remote -->
-  <a class="address btn btn-primary" href="remoteContent.html" data-remote="false" data-toggle="modal" data-target="#cartModal" class="btn btn-default">
+  <a class="address btn btn-primary" href="remoteContent.html" data-remote="false" data-toggle="modal" data-target="#cartModal">
       Add Address
   </a>
 
