--- a/views/cart.hbs
+++ b/views/cart.hbs
@@ -1,7 +1,7 @@
 <div class="container shopping-cart">
   <div class="col-md-12">
     <h2 class="cartH2">Your Shopping Cart</h2>
-    
+
     <!-- Default bootstrap modal example -->
     <div class="modal fade" id="cartModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
       <div class="modal-dialog">
@@ -11,7 +11,7 @@
             <h4 class="modal-title" id="myModalLabel">Add Address</h4>
           </div>
           <div class="modal-body">
-            <form action="/users/address/{{user.id}}"  method="POST" class="text-center col-md-9">
+            <form action="/users/address/{{user}}"  method="POST" class="text-center col-md-9">
             <fieldset>
             <!-- Text input-->
             <div class="form-group">
@@ -32,7 +32,7 @@
             </div>
             <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            <a href=""><button type="button" class="btn btn-primary">Save changes</button></a>  </div>
+          </div>
         </div>
       </div>
     </div>
@@ -53,7 +53,7 @@
         <td>{{this.name}}</td>
         <td>{{this.description}}</td>
         <td class="price" price-data={{this.price}}>${{this.price}}</td>
-        <td><a class='btn btn-danger' href="/cart/{{this.item_id}}/delete">Delete this item</a></td>
+        <td><a class='btn btn-danger' href="/users/cart/{{this.item_id}}/delete">Delete this item</a></td>
       </tr>
       {{/data}}
     </table>
@@ -71,7 +71,7 @@
   </a>
 
   <div class="payment">
-    <form action="/cart/payment" method="POST">
+    <form action="/users/cart/payment" method="POST">
     <script
       src="https://checkout.stripe.com/checkout.js" class="stripe-button"
       data-key="pk_test_8sP6vahxQVW8aN5FlAlYJXmF"
