--- a/views/product.hbs
+++ b/views/product.hbs
@@ -5,7 +5,7 @@
     <h6 class='product'>Description</h6>
     <h4 class='product'><b>{{description}}</b></h4>
     <h4 class='product'>${{price}}</h4>
-    <form class="" action="/cart/add/{{id}}" method="post">
+    <form class="" action="/users/cart/add/{{id}}" method="post">
       <input class="btn btn-success" type="submit" value="Add to Cart"></input>
     </form>
     <br>
