--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -72,7 +72,7 @@
                   <img class="google" src="http://i.stack.imgur.com/XzoRm.png" alt="google oauth" />
                 </a>
               </div>
-              <form class="myInput form-group col-md-6" action="/users/login" method='post'>
+              <form class="myInput form-group col-md-6" action="/login" method='post'>
                 <ul class='errors'>
                   {{#errors}}
                     <li><b>{{this}}</b></li>
@@ -87,7 +87,7 @@
                 <button type="submit" class="btn btn-default">Submit</button>
               </form>
 
-              <form class='form-group signup center-block col-md-6 ' action='/users/signup' method='post'>
+              <form class='form-group signup center-block col-md-6 ' action='/signup' method='post'>
                 <ul class='errors'>
                   {{#errors}}
                     <li><b>{{this}}</b></li>
