--- a/views/cart.hbs
+++ b/views/cart.hbs
@@ -67,9 +67,9 @@
     </div>
   </div>
   <!-- modal remote -->
-  <a class="address" href="remoteContent.html" data-remote="false" data-toggle="modal" data-target="#cartModal" >
+  <!-- <a class="address" href="remoteContent.html" data-remote="false" data-toggle="modal" data-target="#cartModal" >
       <button class="btn btn-default" type="button">ADD ADDRESS</button>
-  </a>
+  </a> -->
 
   <!-- Modal Remote -->
   <a class="address btn btn-primary" href="remoteContent.html" data-remote="false" data-toggle="modal" data-target="#cartModal" class="btn btn-default">
