--- a/views/cart.hbs
+++ b/views/cart.hbs
@@ -37,9 +37,9 @@
       </div>
     </div>
 
-    {{#if msg}}
-      {{msg}}
-    {{/if}}
+    {{#msg}}
+      <h4>{{this}}</h4>
+    {{/msg}}
     <table class="cartTable">
       <tr>
         <th></th>
