new admin video, deleted unused photos

--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -1,6 +1,13 @@
-<div class='text-center videobox' style="position: relative;"display": flex; z-index: -99; width: 90%; height: 90%">
-  <iframe src="//giphy.com/embed/zwHoN7Ch6c9Nu" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="http://giphy.com/gifs/jerology-cinemagraph-sunset-river-zwHoN7Ch6c9Nu"></a></p>
-</div>
+<div class='text-center videobox'>
+  <div class='text-center videobox'>
+    <div class="container text-center col-md-12">
+      <div class='text-center videobox' style="height:70%;width:100%">
+        <video autoplay loop poster="" class="text-center">
+          <source src="../images/kitten.mp4" type="video/mp4">
+          </video>
+        </div>
+      </div>
+  </div>
 
 <div class="container adminContainer">
 <div class="col-md-12  admin">
