--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -65,6 +65,12 @@ nav {
   margin-top: -30px;
 }
 
+img.prof-pic {
+  height: 50px;
+  margin-top: -12px;
+  border-radius: 50%;
+}
+
 .welcome{
   margin-top: -5px;
   float:right;
