Updated seed, changed profile picture style

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -48,7 +48,7 @@
                     <small><a class='cart' href='/users/cart'>MY CART</a> |</small>
                     <small><a class="logout" href="/users/logout">LOG OUT</a></small>
                     {{#if photo}}
-                    <img src="{{photo}}"/>
+                    <img class='prof-pic' src="{{photo}}"/>
                     {{/if}}
                   </h3>
               {{/if}}
