--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    small change
+  <div id='wrap'>
   <nav class="navbar navbar-default navbar-fixed-top">
       <a href='/'><h3 class='main-logo'>gnosh.</h3></a>
       <div class="container nav-container">
@@ -122,7 +122,7 @@
 
     {{{body}}}
 
- <footer class='footer'>
+ <footer class='footer' id='footer'>
     <div class='container'>
       <div class='col-md-2 col-md-offset-1'>
         <a class='footer-links' href='/'><h1 class='footer text-center'>gnosh.</h1></a>
@@ -148,6 +148,7 @@
     </div>
   </footer>
 
+  </div>
   <script type="text/javascript" src="/javascript/main.js"></script>
 </body>
 
