--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -9,10 +9,10 @@ body {
 }
 
 #wrap {
-  min-height: 100%;
+  min-height: 100vh;
   height: auto;
   /* Negative indent footer by its height */
-  margin: 0 auto -60px;
+  margin: 0 auto 0;
   /* Pad bottom by footer height */
   /*padding: 0 0 60px;*/
 }
@@ -337,7 +337,7 @@ div.users > table > tr > th,td {
 /* ADMIN / ITEMS */
 
 div.items {
-  max-height: 600px;
+  height: 600px;
   overflow: scroll;
 }
 
