--- a/views/products.hbs
+++ b/views/products.hbs
@@ -2,7 +2,7 @@
   <div class="all">
     <div class="col-md-12 row">
     {{#items}}
-        <div class="thumbnail center-block col-md-4">
+        <div class="productsThumb thumbnail center-block col-md-4">
           <img style="height:300px; width: 300px" src="{{this.image_url}}" alt="yummy">
           <div class="caption">
             <h4 class='text-center'>{{this.name}}</h4>
