Last minute fixes

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -54,17 +54,21 @@
 <div class="container">
   <div class="row">
       <div class="main-thumbnail col-md-6">
-        <img class='info center-block' style="height: 300px;" src="http://ec.europa.eu/agriculture/organic/images/standard/ec_organic_189.jpg" alt="cheese">
+        <a href='/products'><img class='info center-block' style="height: 300px;" src="http://ec.europa.eu/agriculture/organic/images/standard/ec_organic_189.jpg" alt="cheese"></a>
         <div class="caption">
-          <a href="/products"><h3 class='text-center'>Our Baskets</h3></a>
-          <p class='text-center'>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum faucibus sem sit amet massa euismod, non convallis ligula bibendum. Fusce sagittis leo ac laoreet commodo. Suspendisse aliquet, tortor eu tristique suscipit, nibh elit ullamcorper libero, eu sollicitudin risus ex vel elit. Pellentesque non eros felis. Donec luctus et mi sit amet interdum. Curabitur suscipit risus ligula, </p>
+          <a class='product-link' href="/products"><h3 class='text-center'>Our Baskets</h3></a>
+          <p class='text-center'>We take a lot of pride in the quality and source of our products. All our gnosh comes from local farmers and friends who put their hearts and souls into their work. We focus on food that is sustainably grown, organic, and GMO-free, and we put a huge emphasis on building meaningful relationships with the people that provide us with all this awesome food!</p>
         </div>
       </div>
       <div class="main-thumbnail col-md-6">
         <img class='info center-block' style="height: 300px;" src="http://outoftheboxcollective.com/files/Food%20box%20delivery.jpeg" alt="delivery">
         <div class="caption">
           <h3 class='text-center'>Our Story</h3>
-          <p class='text-center'>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum faucibus sem sit amet massa euismod, non convallis ligula bibendum. Fusce sagittis leo ac laoreet commodo. Suspendisse aliquet, tortor eu tristique suscipit, nibh elit ullamcorper libero, eu sollicitudin risus ex vel elit. Pellentesque non eros felis. Donec luctus et mi sit amet interdum. Curabitur suscipit risus ligula, </p>
+          <p class='text-center'>
+            "I've always loved snacks -- but I didn't love discovering that most of them were killing me! I'm a victim of modern industrial agriculture and so are you.
+            Our mission at GNOSH.com is to protect you from the experience of hangrily walking 12 laps around the grocery store, only to
+            leave empty handed and in tears.  Food allergies are real ya'll, don't listen to the haters. We want to keep you satiated and your blood sugar stable
+            by delivering a customized GnoshBox to your door. Be prepared, don't be hangry." - Matieu Bouchard, Co-Founder &amp; Gnoshologist</p>
         </div>
       </div>
   </div>
