changed text in our baskets

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -57,7 +57,7 @@
         <a href='/products'><img class='info center-block' style="height: 300px;" src="http://ec.europa.eu/agriculture/organic/images/standard/ec_organic_189.jpg" alt="cheese"></a>
         <div class="caption">
           <a class='product-link' href="/products"><h3 class='text-center'>Our Baskets</h3></a>
-          <p class='text-center'>We take a lot of pride in the quality and source of our products. All our gnosh comes from local farmers and friends who put their hearts and souls into their work. We focus on food that is sustainably grown, organic, and GMO-free, and we put a huge emphasis on building meaningful relationships with the people that provide us with all this awesome food!</p>
+          <p class='text-center'>We take a lot of pride in the quality and source of our products. All our gnosh comes from local farmers and friends who put their hearts and souls into their work. We focus on food that is sustainably grown, organic, and GMO-free, and we put a huge emphasis on building meaningful relationships with the people that provide us with all this awesome food! Whether you are gluten-free, sugar-free,dairy-free,grain-free,nut-free, or allergy free, we have a GnoshBox for you!</p>
         </div>
       </div>
       <div class="main-thumbnail col-md-6">
