Last minute touches

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,5 @@
 html, body {
-  height: 100%;
+  min-height: 100vh;
 }
 
 body {
@@ -126,6 +126,7 @@ div.payment {
 
 div.shopping-cart {
   font-family: 'Quicksand', sans-serif;
+  min-height: 62vh;
 }
 
 div.cart {
