messing with email, has no info but sends on order

--- a/views/conf_email.hbs
+++ b/views/conf_email.hbs
@@ -3,17 +3,16 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>Congratulations on joining the GNOSH experience | Welcome</title>
+<title>Thanks for your order! | Welcome</title>
 <link rel="stylesheet" href="http://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
 <link href='http://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css' rel='stylesheet' type='text/css'>
 
 </head>
-<body>
+<body class="text-center">
 
 <div class="top-bar">
 <div class="top-bar-left">
 <ul class="menu">
-<li class="menu-text">Blog</li>
 </ul>
 </div>
 </div>
@@ -21,7 +20,7 @@
 Thanks for your order, {{firstName}}!
 
 
-<div class="callout large primary">
+<div class="callout large primary text-center">
 <div class="row column text-center">
 <h1>GNOSH TIME!</h1>
 <h2 class="subheader">Delicious snacking is in your near future!</h2>
@@ -29,9 +28,9 @@ Thanks for your order, {{firstName}}!
 </div>
 
 <div class="row medium-5 large-4 columns text-center">
-<div class="blog-post">
+<div class="blog-post text-center">
 <img class="thumbnail" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSM_B25_yfs0KqPiN7qb4QPKKs4lXkFeL59BvVrInEZTJnTnz2ZNg">
-<p>Please see a summary of your order below</p>
+<p>Please see a summary of your order below: </p>
 
 <p></p>
 <div class="callout">
